test_suite/alan-2022-examples/failing/003300_mutation.alan
source nu begin if 8 then relax else relax while end end
